# scheduling_app

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: demo_constraints.xlsx  demo_roster.csv  demo_schedule_constraints.csv  scheduling_app.py
