[tool.poetry]
name = "SchedulingApp"
version = "0.1.0"
description = "A streamlit app to help schedule shifts"
authors = ["Alberto Nava <alberto_nava@berkeley.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.3"
streamlit = "^0.69.2"
ortools = "^8.0.8283"
plotly = "^4.12.0"
xlrd = "^1.2.0"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
black = "^20.8b1"
flake8 = "^3.8.4"
pytest = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
